--- a/TreasureHuntHelper/packages.config
+++ b/TreasureHuntHelper/packages.config
@@ -4,5 +4,6 @@
   <package id="NLog" version="4.4.10" targetFramework="net462" />
   <package id="PacketDotNet" version="0.16.0" targetFramework="net462" />
   <package id="Pcap.Net.x86" version="1.0.4.1" targetFramework="net462" />
+  <package id="SharpPcap" version="4.4.0" targetFramework="net462" />
   <package id="zlib.net" version="1.0.4.0" targetFramework="net462" />
 </packages>
