--- a/TreasureHuntHelper/treasureHuntHelper.csproj
+++ b/TreasureHuntHelper/treasureHuntHelper.csproj
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
@@ -56,6 +57,9 @@
     </Reference>
     <Reference Include="PcapDotNet.Packets, Version=1.0.4.25028, Culture=neutral, PublicKeyToken=06a20bc2fabb1931, processorArchitecture=MSIL">
       <HintPath>..\packages\Pcap.Net.x86.1.0.4.1\lib\net45\PcapDotNet.Packets.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpPcap, Version=4.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpPcap.4.4.0\lib\SharpPcap.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -134,6 +138,9 @@
     <Compile Include="API\Protocol\Network\Messages\Debug\DebugClearHighlightCellsMessage.cs" />
     <Compile Include="API\Protocol\Network\Messages\Debug\DebugHighlightCellsMessage.cs" />
     <Compile Include="API\Protocol\Network\Messages\Debug\DebugInClientMessage.cs" />
+    <Compile Include="API\Utils\IO\FastBigEndianReader.cs" />
+    <Compile Include="API\Utils\IO\LittleEndianReader.cs" />
+    <Compile Include="CaptureBis.cs" />
     <Compile Include="Capture.cs" />
     <Compile Include="API\Messages\HostInitializationMessage.cs" />
     <Compile Include="API\Messages\IMessageFilter.cs" />
@@ -1601,10 +1608,8 @@
     <Compile Include="API\Utils\IO\BooleanByteWrapper.cs" />
     <Compile Include="API\Utils\IO\CustomDataConst.cs" />
     <Compile Include="API\Utils\IO\DirectoryInformation.cs" />
-    <Compile Include="API\Utils\IO\FastBigEndianReader.cs" />
     <Compile Include="API\Utils\IO\IDataReader.cs" />
     <Compile Include="API\Utils\IO\IDataWriter.cs" />
-    <Compile Include="API\Utils\IO\LittleEndianReader.cs" />
     <Compile Include="API\Utils\IO\LittleEndianWriter.cs" />
     <Compile Include="API\Utils\IO\Types\Binary64.cs" />
     <Compile Include="API\Utils\IO\Types\CustomInt64.cs" />
@@ -1847,6 +1852,7 @@
     <Compile Include="API\Datacenter\world\SuperArea.cs" />
     <Compile Include="API\Datacenter\world\Waypoint.cs" />
     <Compile Include="API\Datacenter\world\WorldMap.cs" />
+    <Compile Include="PacketProcesserBis.cs" />
     <Compile Include="ToCatch.cs" />
     <Compile Include="MessageHandler.cs" />
     <Compile Include="JsonManager.cs" />
